fix(frontend): 修正儀表板邏輯中的日期格式
修正 Dashboard 中日期格式化字串的錯誤。

- 修正 renderDashboard 函式中的 todayStr 變數。
- 移除月份與日期之間多餘的斜線 /，使其符合註解所述的 YYYYMMDD 格式。
- 此修正確保了與後端回傳的 JSON 日期格式 (YYYYMMDD) 一致，從而保證「下一個連假」判斷邏輯的正確性。

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -602,7 +602,7 @@
         // 格式化為 YYYYMMDD
         const todayStr = `${today.getFullYear()}${String(
           today.getMonth() + 1
-        ).padStart(2, '0')}/${String(today.getDate()).padStart(2, '0')}`;
+        ).padStart(2, '0')}${String(today.getDate()).padStart(2, '0')}`;
 
         // --- 1. 下一個連假邏輯 ---
         let nextHoliday = null;
